Fixing issue with screen moving on mobile

--- a/src/app/image-proc/draw-canvas/draw-canvas.component.css
+++ b/src/app/image-proc/draw-canvas/draw-canvas.component.css
@@ -83,3 +83,7 @@ canvas {
     margin-left: 24px;
   }
 }
+
+canvas {
+  touch-action: none;
+}
